Add css minify to increase performance

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <head>
         <title>Water Systems - San Juan County</title>
-        <link rel="stylesheet" href="css/app.css" />
+        <!-- build:[href]:dev css/app.css -->
+        <link rel="stylesheet" href="css/app.min.css" />
+        <!-- /build -->
 
 
 
@@ -21,7 +24,7 @@
                     <p class="lorem">This web map shows Water System locations and boundaries in San Juan County WA. Water system boundaries are defined by the parcels included in the water system as set in the San Juan County Health Department's database. </p>
 
                     <h3>How to Use</h3>
-                    <p class="lorem">Search for your water system name, address or parcel number. Click on a marker or boundary for information related to your water system.</p>
+                    <p class="lorem">Click on the magnifying glass to search for your water system name, address or parcel number. Click on a marker or boundary for information related to your water system.</p>
 
                     <p class="lorem">Please report mapping errors to <a href="mailto:sjcgis@sanjuanco.com">sjcgis@sanjuanco.com</a></p>
                 </div>
