Add maptiks analytics library

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,10 @@
              L.App.app = new L.App.AppController();
          };
         </script>
-        <!-- build:js:prod inline js/ga.js -->
-        <!-- Google Analytics Code goes here -->
+        <script src="//cdn.maptiks.com/maptiks-leaflet.min.js"></script>
+        <!-- build:js:prod inline -->
+        <script src="js/ga.js" type="text/javascript"></script>
+        <script src="js/maptiks.js" type="text/javascript"></script>
         <!-- /build -->
     </body>
 </html>
