Added awesome markers for location searches. Changed text in sidebar per Health Dept suggestion.

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,14 @@
             <div class="sidebar-content active">
                 <div class="sidebar-pane" id="home">
                     <h1>Water Systems</h1>
-                    <p class="lorem">This web map shows Water System locations and boundaries in San Juan County WA. Water system boundaries are defined by the parcels included in the water system as set in the San Juan County Health Department's database. </p>
+                    <p class="lorem">This web map shows Water System locations and boundaries in San Juan County WA. Water system boundaries are defined by the parcels included in the water system as set in the San Juan County Health Department's database.</p>
+
+                    <p class="lorem">The water system name, along with the State ID# and water system Group are identified.  Group A public water systems serve 15 or more residential connections and 25 or more people per day.  Group A water systems are regulated by the Washington State Department of Health.  Group B public water systems serve fewer than 15 residential connections and fewer than 25 people per day.  San Juan County Health and Community Services regulates Group B systems in our County</p>
 
                     <h3>How to Use</h3>
                     <p class="lorem">Click on the magnifying glass to search for your water system name, address or parcel number. Click on a marker or boundary for information related to your water system.</p>
+
+                    <p class="lorem">You can obtain additional information about a water system such as the water system contact, sampling history, and approval status by searching the <a href="https://fortress.wa.gov/doh/eh/portal/odw/si/Intro.aspx" target="_blank">Washington State Department of Health Sentry database</a>.  Search by water system name or State ID#.  </p>
 
                     <p class="lorem">Please report mapping errors to <a href="mailto:sjcgis@sanjuanco.com">sjcgis@sanjuanco.com</a></p>
                 </div>
