--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
                     <p class="lorem">The water system name, along with the State ID# and water system Group are identified.  Group A public water systems serve 15 or more residential connections and 25 or more people per day.  Group A water systems are regulated by the Washington State Department of Health.  Group B public water systems serve fewer than 15 residential connections and fewer than 25 people per day.  San Juan County Health and Community Services regulates Group B systems in our County</p>
 
                     <h3>How to Use</h3>
-                    <p class="lorem">Click on the magnifying glass to search for your water system name, address or parcel number. Click on a marker or boundary for information related to your water system.</p>
+                    <p class="lorem">Click on the magnifying glass to search for your water system name, address or parcel number. Click on a marker or boundary for basic information related to your water system.</p>
 
-                    <p class="lorem">You can obtain additional information about a water system such as the water system contact, sampling history, and approval status by searching the <a href="https://fortress.wa.gov/doh/eh/portal/odw/si/Intro.aspx" target="_blank">Washington State Department of Health Sentry database</a>.  Search by water system name or State ID#.  </p>
+                    <p class="lorem">You can obtain additional information about a water system such as the water system contact, sampling history, and approval status by clicking the "Additional Info" link in the pop-up. The additional information is accessed from the <a href="https://fortress.wa.gov/doh/eh/portal/odw/si/Intro.aspx" target="_blank">Washington State Department of Health Sentry database</a>. </p>
 
                     <p class="lorem">Please report mapping errors to <a href="mailto:sjcgis@sanjuanco.com">sjcgis@sanjuanco.com</a></p>
                 </div>
