Font and language updates

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
                     <p class="lorem">You can obtain additional information about a water system such as the water system contact, sampling history, and approval status by clicking the "Additional Info" link in the pop-up. The additional information is accessed from the <a href="https://fortress.wa.gov/doh/eh/portal/odw/si/Intro.aspx" target="_blank">Washington State Department of Health Sentry database</a>. </p>
 
                     <p class="lorem">Please report mapping errors to <a href="mailto:sjcgis@sanjuanco.com">sjcgis@sanjuanco.com</a></p>
+
+                    <p class="lorem"><a target="_blank" href="http://github.org/sjcgis/water-systems">Water Systems</a> is an open-source project.</p>
                 </div>
             </div>
         </div>
