Added disclaimer language. Fixes #9

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
             <!-- Nav Tabs -->
             <ul class="sidebar-tabs" role="tablist">
                 <li><a href="#home" role="tab"><i class="fa fa-list-alt"></i></a></li>
+                <li><a href="#disclaimer" role="tab"><i class="fa fa-info"></i></a></li>
             </ul>
 
             <!-- Tab Panes -->
@@ -33,6 +34,15 @@
                     <p class="lorem">Please report mapping errors to <a href="mailto:sjcgis@sanjuanco.com">sjcgis@sanjuanco.com</a></p>
 
                     <p class="lorem"><a target="_blank" href="http://github.org/sjcgis/water-systems">Water Systems</a> is an open-source project.</p>
+                </div>
+                <div class="sidebar-pane" id="disclaimer">
+                    <h2>Disclaimer</h2>
+                    <p class="lorem">
+                        San Juan County does not warrant the accuracy, reliability or timeliness of any information provided. Any person or entity who relies on information obtained from this real property query does so at his or her own risk. The maps are for educational purposes only and the data should be verified for accuracy with the water system itself.
+                    </p>
+                    <p class="lorem">
+                        RCW 42.56.070(9) prohibits the release of lists of individuals requested for commercial purposes, and the requestor expressly represents that no use of any such list will be made by the user or its transferee(s) or vendee(s). "Commercial purposes" means contacting or in some way personally affecting the individuals identified on the list with the purpose of facilitating one's commercial activities.
+                    </p>
                 </div>
             </div>
         </div>
