chore: adapt code to updated dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <head>
         <title>Water Systems - San Juan County</title>
-        <!-- build:[href]:dev css/app.css -->
-        <link rel="stylesheet" href="css/app.min.css" />
+        <!-- build:[href]:dev app.css -->
+        <link rel="stylesheet" href="app.min.css" />
         <!-- /build -->
 
 
@@ -14,8 +14,8 @@
         <div id="sidebar" class="sidebar">
             <!-- Nav Tabs -->
             <ul class="sidebar-tabs" role="tablist">
-                <li><a href="#home" role="tab"><i class="fa fa-list-alt"></i></a></li>
-                <li><a href="#disclaimer" role="tab"><i class="fa fa-info"></i></a></li>
+                <li><a href="#home" role="tab"><i class="oi" data-glyph="menu"></i></a></li>
+                <li><a href="#disclaimer" role="tab"><i class="oi" data-glyph="info"></i></a></li>
             </ul>
 
             <!-- Tab Panes -->
@@ -55,10 +55,8 @@
              L.App.app = new L.App.AppController();
          };
         </script>
-        <script src="//cdn.maptiks.com/maptiks-leaflet.min.js"></script>
         <!-- build:js:prod inline -->
         <script src="js/ga.js" type="text/javascript"></script>
-        <script src="js/maptiks.js" type="text/javascript"></script>
         <!-- /build -->
     </body>
 </html>
